force-app/main/default/objects/AH_UDC_WorkbookStepResponse__c/AH_UDC_WorkbookStepResponse__c.object-meta.xml
<CustomObject>
    <description>This is a junction object used to associate a Workbook Sent Step with Responses</description>
    <label>UDC Workbook Step Response</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Workbook Step Response Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UDC Workbook Step Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>