force-app/main/default/objects/AH_UDC_WorkbookStepResponse__c/fields/IsMostRecentResponse__c.field-meta.xml
<CustomField>
    <fullName>IsMostRecentResponse__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is true if the response is the most recent; this helps with reports and formulas that are showing responses.</description>
    <inlineHelpText>This field is true if the response is the most recent; this helps with reports and formulas that are showing responses.</inlineHelpText>
    <label>Is Most Recent Response</label>
    <type>Checkbox</type>
</CustomField>