force-app/main/default/objects/AH_UDC_WorkbookStepResponse__c/fields/Response__c.field-meta.xml
<CustomField>
    <fullName>Response__c</fullName>
    <label>Response</label>
    <referenceTo>AH_UDC_Response__c</referenceTo>
    <relationshipName>Workbook_Step_Responses</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>