force-app/main/default/objects/AH_UDC_WorkbookStepResponse__c/fields/WorkbookStep__c.field-meta.xml
<CustomField>
    <fullName>WorkbookStep__c</fullName>
    <label>Workbook Step</label>
    <referenceTo>AH_UDC_WorkbookStep__c</referenceTo>
    <relationshipName>Workbook_Step_Responses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>